Mapprio/main/default/objects/MapprioQuestion__c/MapprioQuestion__c.object-meta.xml
<CustomObject>
    <label>Mapprio Question</label>
    <nameField>
        <label>Mapprio Question ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapprio Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>