Mapprio/main/default/objects/MapprioQuestion__c/fields/MapprioId__c.field-meta.xml
<CustomField>
    <fullName>MapprioId__c</fullName>
    <externalId>true</externalId>    <label>Mapprio ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>