Mapprio/main/default/objects/MapprioQuestion__c/fields/MapprioSmartSurvey__c.field-meta.xml
<CustomField>
    <fullName>MapprioSmartSurvey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapprio Smart Survey</label>
    <referenceTo>MapprioSmartSurvey__c</referenceTo>
    <relationshipLabel>Mapprio Questions</relationshipLabel>
    <relationshipName>MapprioQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>