Mapprio/main/default/objects/MapprioQuestion__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Question Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>